# ChangeLog for www-plugins/mozilla-weave
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 Apr 2009; Mounir Lamouri (volkmar) <mounir.lamouri@gmail.com>
  +mozilla-weave-0.2.104.ebuild, +metadata.xml:
  new ebuild for bug 235397
