@@ -1,4 +1,6 @@
 DIST mozilla-weave-0.2.104.tar.gz 459124 RMD160 78daa66bc43e018377ab2e8c464530932ab2cb0f SHA1 faf2cac02b7c3018b5c634656795e72fe355d369 SHA256 e80fe8e917ea5fce01fa0e009aec2f95925003ee7dda10e5c30fa22ef1ec0ed0
+DIST mozilla-weave-0.3.0.tar.gz 464374 RMD160 64d3270eaebd2e04b8ccbd01dc9d0e41b08382f5 SHA1 0c0e854228c886331d2adfd353edd5fb7915060e SHA256 620546e16ff444395eace5b2d347b3ad27b1f7dce41d28e554e1c11fad36baf7
 EBUILD mozilla-weave-0.2.104.ebuild 2268 RMD160 33f6751070ff99e25501165817bbb999f0910e65 SHA1 681e7a8039dc98ad04ab919fd56fc656eb69db61 SHA256 f2d69aa715519c61a348de4eabed0624d498924d71a86f261cf0137317b28edb
-MISC ChangeLog 270 RMD160 6b8f9fe209b8274168257249f7d76b9c4b3e796b SHA1 7c3601a49cdad28e93593a322c17c154973f6966 SHA256 8c36d0fe2106134bb54ce2c41b7c572c1b21beeb3002bd6b6ae157ee45bc3689
+EBUILD mozilla-weave-0.3.0.ebuild 2312 RMD160 e384e606b5dd334633cbe53864f3f383863f7216 SHA1 c5f15c5331b1676c22e9cf1b48fef2f695a655a2 SHA256 cb8007dd41e9e0664ae20e15d93e352ddeafb15c16ca312999c1ab790f717375
+MISC ChangeLog 416 RMD160 0b75ccd75ff5d252687356c010502b179f7a2442 SHA1 a44aa80a8e0d1106cde0242bf5176f1f0e5190e0 SHA256 5f7c9279d8557496d5f099c1e222f96ce90aca2263c651551a8e207da4af888e
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
