@@ -3,6 +3,10 @@
 # $Header: $
 
   05 Apr 2009; Mounir Lamouri (volkmar) <mounir.lamouri@gmail.com>
+  +mozilla-weave-0.3.0.ebuild:
+  mozilla-weaver-0.3.0 bump which needs ff-3.1
+
+  05 Apr 2009; Mounir Lamouri (volkmar) <mounir.lamouri@gmail.com>
   +mozilla-weave-0.2.104.ebuild, +metadata.xml:
   new ebuild for bug 235397
 
